@@ -44,14 +44,17 @@ UniformPanel::UniformPanel(wxWindow* parent)
   Show();
 }
 
+// TODO make this work for stuff other than float
 class AttribSlider : public wxSlider {
 public:
   AttribSlider(wxWindow* parent, ShVariableNodePtr var, int i)
-    : wxSlider(parent, -1, 0, (int)(var->lowBound()*100.0f), (int)(var->highBound()*100.0f),
+    : wxSlider(parent, -1, 0, 
+               (int)((*variant_cast<SH_FLOAT, SH_HOST>(var->lowBoundVariant()))[i] * 100.0f), 
+               (int)((*variant_cast<SH_FLOAT, SH_HOST>(var->highBoundVariant()))[i] * 100.0f),
                wxDefaultPosition, wxDefaultSize, wxSL_HORIZONTAL | wxSL_LABELS), 
       m_var(var), m_index(i)
   {
-    setFloatValue(var->getValue(i));
+    setFloatValue((*variant_cast<SH_FLOAT, SH_HOST>(var->getVariant()))[i]);
   }
 
   void setFloatValue(float value)
@@ -61,7 +64,7 @@ public:
   
   void scroll(wxScrollEvent& event)
   {
-    m_var->setValue(m_index, (float)event.GetPosition()/100.0f);
+    m_var->setVariant(new ShDataVariant<SH_FLOAT, SH_HOST>(1, event.GetPosition()/100.0f),m_index);
     ShrikeCanvas::instance()->render();
   }
 
@@ -166,11 +169,11 @@ void UniformTimer::Notify()
 
     AttribSlider* slider = I->slider;
     for (int i = 0; i < var->size(); i++) {
-      float val = var->getValue(i);
-      float low = var->lowBound();
-      float high = var->highBound();
+      float val = (*variant_cast<SH_FLOAT, SH_HOST>(var->getVariant()))[i];
+      float low = (*variant_cast<SH_FLOAT, SH_HOST>(var->lowBoundVariant()))[i];
+      float high = (*variant_cast<SH_FLOAT, SH_HOST>(var->highBoundVariant()))[i];
       val = std::fmod((val + I->step) - low, high - low) + low; 
-      var->setValue(i, val);
+      var->setVariant(new ShDataVariant<SH_FLOAT, SH_HOST>(1, val), i);
       if (slider) {
         slider->setFloatValue(val);
         slider = slider->next();
@@ -210,8 +213,10 @@ public:
   void check(wxCommandEvent& event)
   {
     if (event.IsChecked()) {
+      float high = (*variant_cast<SH_FLOAT, SH_HOST>(m_node->highBoundVariant()))[0];
+      float low = (*variant_cast<SH_FLOAT, SH_HOST>(m_node->lowBoundVariant()))[0];
       UniformTimer::instance()->add(m_node,
-                                    (m_node->highBound() - m_node->lowBound())/80.0f,
+                                    (high - low)/80.0f,
                                     m_slider);
     } else {
       UniformTimer::instance()->remove(m_node);
@@ -318,9 +323,10 @@ public:
     wxColourData data;
 
     
-    wxColour old(static_cast<unsigned char>(m_node->getValue(0) * 255.0),
-                 static_cast<unsigned char>(m_node->getValue(1) * 255.0),
-                 static_cast<unsigned char>(m_node->getValue(2) * 255.0));
+    const ShDataVariant<SH_FLOAT, SH_HOST> &variant = (*variant_cast<SH_FLOAT, SH_HOST>(m_node->getVariant()));
+    wxColour old(static_cast<unsigned char>(variant[0] * 255.0),
+                 static_cast<unsigned char>(variant[1] * 255.0),
+                 static_cast<unsigned char>(variant[2] * 255.0));
     
     data.SetColour(old);
     
@@ -328,9 +334,9 @@ public:
     if (dialog.ShowModal() == wxID_OK) {
       wxColourData& cd = dialog.GetColourData();
       wxColour& c = cd.GetColour();
-      m_node->setValue(0, (float)c.Red()/255.0);
-      m_node->setValue(1, (float)c.Green()/255.0);
-      m_node->setValue(2, (float)c.Blue()/255.0);
+      m_node->setVariant(new ShDataVariant<SH_FLOAT, SH_HOST>(1, (float)c.Red()/255.0f), 0);
+      m_node->setVariant(new ShDataVariant<SH_FLOAT, SH_HOST>(1, (float)c.Green()/255.0f), 1);
+      m_node->setVariant(new ShDataVariant<SH_FLOAT, SH_HOST>(1, (float)c.Blue()/255.0f), 2);
       
       ShrikeCanvas::instance()->render();
     }
@@ -381,8 +387,8 @@ void UniformPanel::addVar(const ShVariableNodePtr& var,
     DepButton* button = new DepButton(this, var);
     sizer->Add(button);
   } else if (var->specialType() == SH_COLOR
-      && var->lowBound() == 0.0
-      && var->highBound() == 1.0) {
+      && (*variant_cast<SH_FLOAT, SH_HOST>(var->lowBoundVariant()))[0] == 0.0
+      && (*variant_cast<SH_FLOAT, SH_HOST>(var->highBoundVariant()))[0] == 1.0) {
     ColorButton* button = new ColorButton(this, var);
     sizer->Add(button);
   } else {
