@@ -65,7 +65,7 @@ bool DiffuseShader::init()
   vsh = shSwizzle("normal", "lightVec", "posh") << vsh;
 
   ShColor3f SH_DECL(color) = ShColor3f(.5, 0.9, 0.2);
-  ShConstColor3f lightColor(1.0f, 1.0f, 1.0f);
+  ShConstColor3f SH_DECL(lightColor) = ShColor3f(1.0f, 1.0f, 1.0f);
   fsh = ShKernelSurface::diffuse<ShColor3f>() << color << lightColor;
   return true;
 }
